# ComfyUI-UnlimitAI

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  API_USAGE_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY_CHECK.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOYMENT_COMPLETE.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SIZE_REPORT.md  VALIDATION_REPORT.md  __init__.py  __version__.py  cli.py  config.yaml  docker-compose.yml  download_models.sh  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  start.sh  status.sh  stop.sh  test_enhanced_nodes.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apis/: flux.py  ideogram.py  imagen.py  kling.py  luma.py  minimax.py  openai.py  recraft.py  runway.py  suno.py  text.py  veo.py  vidu.py
docs/: DOCKER.md  FRONTEND_DEVELOPMENT_PLAN.md  FRONTEND_PROJECT_SUMMARY.md  PERFORMANCE.md  PROJECT_STRUCTURE.md  TODO.md  WORKFLOW_GUIDE.md  quick_start.py  validate_workflow.py
docs/api/: API_REFERENCE.md
docs/guides/: ADVANCED_FEATURES_GUIDE.md  CHARACTER_MANAGEMENT_GUIDE.md  COMFYUI_GUIDE.md  COMPARISON.md  MODEL_SELECTION_GUIDE.md  OPTIMIZATION_GUIDE.md  README.md  WORKFLOW_GUIDE.md  WORKFLOW_PRESETS.md
docs/reports/: CHARACTER_IMPLEMENTATION_REPORT.md  CHECK_REPORT.md  CODE_QUALITY_FIX_SUMMARY.md  CODE_QUALITY_REPORT.md  DEEP_OPTIMIZATION_ANALYSIS.md  FINAL_SUMMARY.md  FULL_OPTIMIZATION_REPORT.md  OPTIMIZATION_COMPLETE_REPORT.md  OPTIMIZATION_IMPLEMENTATION_REPORT.md  OPTIMIZATION_RECOMMENDATIONS.md  OPTIMIZATION_STRATEGIES.md  OPTIMIZATION_SUMMARY.md  PERFECTION_ASSESSMENT.md  PERFECTION_COMPLETE.md  PROGRESS.md  PROJECT_CHECK_REPORT.md  PROJECT_OVERVIEW.md  QUICK_OPTIMIZATION_COMPLETE.md  ULTIMATE_CHECK_REPORT.md  节点完整性检查报告.md
examples/: README.md  basic_usage.py
nodes/: advanced_nodes.py  audio_nodes.py  audio_nodes_v3.py  character_nodes.py  character_nodes_optimized.py  config_nodes.py  config_nodes_v3.py  image_nodes.py  image_nodes_v3.py  music_nodes.py  music_nodes_v3.py  optimized_nodes.py  optimized_nodes_v3.py  text_nodes.py  text_nodes_v3.py  video_enhanced_nodes.py  video_nodes.py  video_nodes_v3.py  workflow_nodes.py  workflow_nodes_v3.py
scripts/: backup.py  benchmark.py  check_project.py  check_workflows.py  fix_code_quality.py  start.sh  test_cost_optimization.py
tests/: README.md  conftest.py  test_api_client.py  test_character_nodes.py  test_nodes_basic.py  test_persistent_storage.py  test_utils.py  test_v3_nodes.py  test_workflows.py
unlimitai_util/: __init__.py  _helpers.py  client.py  common_exceptions.py  conversions.py  download_helpers.py  request_logger.py  upload_helpers.py  validation_utils.py
utils/: api_client.py  api_client.pyi  config.py  content_dedup.py  cost_optimizer.py  delay.py  exceptions.py  helpers.py  json_utils.py  kling_helpers.py  logger.py  persistent_storage.py  progress_tracker.py  progressive_gen.py  robust_executor.py  smart_skip.py  types.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  vite-env.d.ts
web/src/components/: ApiKeyLogin.tsx  ConfigPanel.tsx  CreationPanel.tsx  CreativeAssistant.tsx  Logo.tsx  ModelComparisonPanel.tsx  NovelInput.tsx  ProfessionalAssistant.tsx  ProgressMonitor.tsx  PromptEditorPanel.tsx  ResourceManager.tsx  ResultGallery.tsx  SettingsPanel.tsx  SmartCreationPanel.tsx  SmartNovelInput.tsx  StoryboardEditor.tsx  StoryboardPanel.tsx  StoryboardViewer.tsx  WorkflowSelector.tsx
web/src/data/: storyboard-templates.ts
web/src/hooks/: useComfyUI.ts
web/src/lib/: ai-assistant-api.ts  batch-scene-manager.ts  comfyui-client.ts  comfyui-helpers.ts  config.ts  drama-production-workflow.ts  event-bus.ts  (+6 more)
workflow_configs/: balanced_config.json  budget_config.json  max_quality_config.json  quality_config.json
workflows/: model_selector.json  novel_to_drama_complete_workflow.json
(+35 files in other folders)
